<resources>
    <string name="app_name">Compromise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resolve_a_dispute">Resolve a dispute</string>
    <string name="history_of_disputes">History of disputes</string>
    <string name="settings">Settings</string>

    //Add dispute fragment
    <string name="addDisputeItem">Add dispute item</string>
    <string name="addDisputeName">Enter name</string>
    <string name="addDisputeWeight">Enter weight</string>
    <string name="addDisputeAdd">Add</string>


</resources>