<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="350dp"
    tools:context=".view.dispute.DisputeAddFragment"
    android:background="@color/primaryColor"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/middleTextSize"
        android:text="@string/addDisputeItem"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/addDisputeItemName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/addDisputeName"
        android:padding="10dp"
        android:background="@color/white"
        android:layout_marginBottom="11dp"
        android:inputType="text"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/addDisputeItemWeight"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/addDisputeWeight"
        android:padding="10dp"
        android:background="@color/white"
        android:layout_marginBottom="11dp"
        android:inputType="text"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addDisputeAdd"
        android:backgroundTint="@color/white" />

</LinearLayout>